Initial push: Railway-ready (Dockerfile, env-based URLs, healthz)

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@ __pycache__/
 staticfiles/
 media/
 client/node_modules/
+
+# root ignores
+.env
+venv/
+__pycache__/
+staticfiles/
+media/
+client/node_modules/
