--- a/task_manager/Procfile
+++ b/task_manager/Procfile
@@ -1,2 +1,2 @@
-release: python manage.py migrate --noinput && python manage.py collectstatic --noinput
-web: daphne -b 0.0.0.0 -p $PORT task_manager.asgi:application
+release: python manage.py migrate --noinput && python manage.py collectstatic --noinput  # may be ignored by Railway
+web: bash -lc "python manage.py migrate --noinput && python manage.py collectstatic --noinput && daphne -b 0.0.0.0 -p ${PORT:-8000} task_manager.asgi:application"
